<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/len_8"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_item"
        app:cardCornerRadius="@dimen/len_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/len_8"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_margin="@dimen/len_2"
                        android:id="@+id/article_author_avatar"
                        tools:src="@drawable/default_portrait"
                        android:layout_width="@dimen/len_20"
                        android:layout_height="@dimen/len_20" />

                    <TextView
                        android:id="@+id/article_author"
                        android:textStyle="bold"
                        tools:text="@string/article_author_hint_1"
                        android:textSize="@dimen/font_16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="分类："
                        android:textSize="@dimen/font_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/article_tags"
                        android:textSize="@dimen/font_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/article_tags_hint_1" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/article_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textColor="@color/black_alpha_160"
                android:textSize="@dimen/font_12"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/len_6"
                android:layout_marginEnd="@dimen/len_6"
                tools:text="@string/article_title_hint_1" />

            <TextView
                android:id="@+id/article_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/len_2"
                android:lines="2"
                android:paddingStart="@dimen/len_8"
                android:textStyle="italic"
                android:textSize="@dimen/font_8"
                tools:text="@string/article_des_hint_1" />

            <LinearLayout
                android:gravity="right"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="@dimen/font_10"
                    android:text="日期："
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/article_update_time"
                    android:textSize="@dimen/font_10"
                    tools:text="@string/article_date_hint_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>